Changes on 05/30/23 Random array slicing led to a dead-end, so trying another algorithm that looks promising. Treasure squares are now clustering, but only horizontally and with overlap across two rows. Working to find fix for this...

--- a/style.css
+++ b/style.css
@@ -200,4 +200,19 @@ div {
         width: 40%;
         text-align: center; 
         margin: auto;
-        }   
+        }  
+        
+.chest {
+    background-color: brown;
+}
+
+.umbrella {
+    background-color: purple
+}
+
+.surfboard {
+    background-color: pink;
+}
+
+
+
